# bewise_ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sql.py
src/models/: __init__.py  question.py
src/request/: question_request.py
src/route/: routers.py
